Fix text readability using dark background.

--- a/styles/email-frame.less
+++ b/styles/email-frame.less
@@ -1,12 +1,10 @@
-@import "ui-variables";
-
 .ignore-in-parent-frame {
     body {
-        filter: invert(100%) hue-rotate(180deg) !important;
+        -webkit-filter: invert(100%) hue-rotate(180deg) !important;
         color: #111;
     }
 
     img {
-        filter: invert(100%) hue-rotate(180deg) !important;
+        -webkit-filter: invert(100%) hue-rotate(180deg) !important;
     }
 }
